tests/quick_start_check_contents/quick_start_check_contents.exp

Stop any already-running server.

Quick start.

Expect no errors.
No errors!

The Flow server is currently in lazy mode and is only checking 0/5 source files (+ 2/2 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes

Check contents with dependency, expect errors in contents.
Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot cast `require(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:3:1
   3| require('./dependency') as string;
      ^^^^^^^^^^^^^^^^^^^^^^^

References:
   dependency.js:2:29
   2| module.exports = "hello" as number;
                                  ^^^^^^ [1]
   test.js:3:28
   3| require('./dependency') as string;
                                 ^^^^^^ [2]



Found 1 error

No error in dependency (it is not checked).
No errors!

The Flow server is currently in lazy mode and is only checking 0/5 source files (+ 2/2 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes

Unsaved files don't have dependents, as in non-lazy mode.
No errors!

Done!
